Add new PlaylistObserver which deprecates PlaylistBridge